--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="sobrenome">Sobrenome</string>
     <string name="prompt_confirm_password">Confirmar senha</string>
     <string name="register">Cadastrar</string>
+    <string name="title_activity_main">MainActivity</string>
 </resources>
