--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
-    <string name="nome">Nome</string>
+    <string name="name">Nome</string>
     <string name="sobrenome">Sobrenome</string>
     <string name="prompt_confirm_password">Confirmar senha</string>
     <string name="register">Cadastrar</string>
